update language File

--- a/Configuration/Language/de.lproj/Localizable.strings
+++ b/Configuration/Language/de.lproj/Localizable.strings
@@ -377,6 +377,24 @@
 "mail.service.error.receiveFailed" = "Empfangen fehlgeschlagen";
 "mail.service.error.notImplemented" = "Nicht implementiert";
 
+/* MARK: - ComposeMailView */
+"app.mail.compose.title" = "Neue Nachricht";
+"app.mail.compose.from" = "Von";
+"app.mail.compose.to" = "An";
+"app.mail.compose.to_placeholder" = "E-Mail-Adresse";
+"app.mail.compose.cc" = "CC";
+"app.mail.compose.bcc" = "BCC";
+"app.mail.compose.subject" = "Betreff";
+"app.mail.compose.subject_placeholder" = "Betreff eingeben";
+"app.mail.compose.body" = "Nachricht";
+"app.mail.compose.html" = "HTML-Modus";
+"app.mail.compose.attachments" = "Anhänge";
+"app.mail.compose.no_attachments" = "Keine Anhänge";
+"app.mail.compose.add_photo" = "Foto hinzufügen";
+"app.mail.compose.add_file" = "Datei hinzufügen";
+"app.mail.send" = "Senden";
+"app.common.cancel" = "Abbrechen";
+
 /* Shared Components */
 /* Files: Features/Shared/MailComposer.swift, MarkdownHelper.swift */
 /* MARK: - Mail Composer */
@@ -525,3 +543,23 @@
 "app.mail.action.mark_unread" = "Als ungelesen markieren";
 "app.mail.action.show_technical" = "Quelltext anzeigen";
 "app.mail.action.hide_technical" = "Quelltext ausblenden";
+
+/* ComposeMailView - Complete */
+"app.mail.compose.title" = "Neue Nachricht";
+"app.mail.compose.from" = "Von";
+"app.mail.compose.to" = "An";
+"app.mail.compose.to_placeholder" = "E-Mail-Adresse";
+"app.mail.compose.cc" = "CC";
+"app.mail.compose.cc_placeholder" = "Kopie an";
+"app.mail.compose.bcc" = "BCC";
+"app.mail.compose.bcc_placeholder" = "Blindkopie an";
+"app.mail.compose.subject" = "Betreff";
+"app.mail.compose.subject_placeholder" = "Betreff eingeben";
+"app.mail.compose.body" = "Nachricht";
+"app.mail.compose.html" = "HTML-Modus";
+"app.mail.compose.attachments" = "Anhänge";
+"app.mail.compose.no_attachments" = "Keine Anhänge";
+"app.mail.compose.add_photo" = "Foto hinzufügen";
+"app.mail.compose.add_file" = "Datei hinzufügen";
+"app.mail.send" = "Senden";
+"app.common.cancel" = "Abbrechen";
